# finkvra

./: .buildinfo  README.md  al_atlas.html  al_firstloops.html  finkvra.active_learning.html  finkvra.alonstream.html  finkvra.data.html  finkvra.html  finkvra.utils.html  genindex.html  index.html  introduction.html  modules.html  notes.html  objects.inv  py-modindex.html  pyproject.toml  quickrefs.html  search.html  searchindex.js  speeddial.html  todo.html  workflow.html
.doctrees/: al_atlas.doctree  al_firstloops.doctree  environment.pickle  finkvra.active_learning.doctree  finkvra.alonstream.doctree  finkvra.data.doctree  finkvra.doctree  finkvra.utils.doctree  index.doctree  introduction.doctree  modules.doctree  notes.doctree  quickrefs.doctree  speeddial.doctree  todo.doctree  workflow.doctree
.github/: lint.yaml
.github/workflows/: ci.yaml  docs.yml
_sources/: al_atlas.rst.txt  al_firstloops.rst.txt  finkvra.active_learning.rst.txt  finkvra.alonstream.rst.txt  finkvra.rst.txt  finkvra.utils.rst.txt  index.rst.txt  introduction.rst.txt  modules.rst.txt  notes.rst.txt  quickrefs.rst.txt  workflow.rst.txt
docs/: al_firstloops.rst  conf.py  finkvra.data.rst  index.rst  introduction.rst  quickrefs.rst  requirements.txt  speeddial.rst  todo.rst
finkvra/: train.py
finkvra/.github/workflows/: ci.yaml
finkvra/active_learning/: learner.py  metrics.py  strategy.py
finkvra/alonstream/: alpipeline.py
finkvra/data/: X_train_day1_duck1000rows.csv  X_train_dayN_duck1000rows.csv  X_val_day1_duck1000rows.csv  X_val_dayN_duck1000rows.csv  __init__.py  config_experiments.yaml  test_alerts.npz  test_config.yaml  y_train_day1_duck1000rows.csv  y_train_dayN_duck1000rows.csv  y_val_day1_duck1000rows.csv  y_val_dayN_duck1000rows.csv
finkvra/tests/: test_alpipeline.py  test_consumer.py  test_features.py  test_learner.py  test_metrics.py  test_strategy.py  test_train.py
finkvra/utils/: consumer.py  features.py  labels.py
