[build-system]
requires = ["setuptools", "setuptools-scm"]                                                                                  
build-backend = "setuptools.build_meta"   



[project]
name = "finkvra"
version = "0.1.0"
description = "Active Learning prototype for the Fink VRA using day 1 and day N models"
authors = [
    { name = "H. F. Stevance", email = "hfstevance@gmail.com" }
]
readme = "README.md"
#license = { text = "MIT" }
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib",
    "plotly",
    "tqdm",
    "fink_client"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ipython",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["finkvra"]

[tool.setuptools.package-data]
"finkvra.data" = ["*.csv", "*.npz"]