[build-system]
requires = ["setuptools", "setuptools-scm"]                                                                                  
build-backend = "setuptools.build_meta"   

[project]
name = "finkvra"
version = "0.1.0"
description = "Active Learning prototype for the Fink VRA using day 1 and day N models"
authors = [
    { name = "H. F. Stevance", email = "hfstevance@gmail.com" }
]
readme = "README.md"
#license = { text = "MIT" }
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "matplotlib",
    "plotly",
    "tqdm",
    "fink_client",
    "lasair",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ipython",
    "jupyter"
]

docs = ["sphinx==7.4.7", "sphinx_book_theme, "sphinx_rtd_theme==3.0.2"]    

[tool.setuptools.packages.find]
where = ["finkvra"]

[tool.setuptools.package-data]
"finkvra.data" = ["*.csv", "*.npz"]

[tool.ruff]                                                                     
line-length = 100                                                               
target-version = "py39"                                                         
exclude = ["build", "dist", ".venv"]

[tool.coverage.run]
omit = [
    "finkvra/utils/labels.py",  
]